--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+		<form class="page-1 show">
+			<h2>TIC TAC TOE</h2>
+			<div>
+				<label for="player-1">Player 1</label>
+				<input id="player-1" type="text" placeholder="enter name" required>
+			</div>
+			<div>
+				<label for="player-2">Player 2</label>
+				<input id="player-2" type="text" placeholder="enter name" required>
+			</div>
+			<button>Start Game</button>
+	</form>
+	</div>	
     <script type="text/javascript" src="./script.js">
 </script>
 
