--- a/main.html
+++ b/main.html
@@ -9,15 +9,15 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="container">
-		<h1>TIC TAC TOE</h1>
+		<h1>Tic Tac Toe</h1>
 		<form class="show">
 			<div>
-				<label for="player-1">Player 1</label>
-				<input id="player-1" type="text" name="p1" placeholder="enter name" required>
+				<label for="player1">Player 1</label>
+				<input id="player1" type="text" name="p1" placeholder="enter name" required>
 			</div>
 			<div>
-				<label for="player-2">Player 2</label>
-				<input id="player-2" type="text" name="p2" placeholder="enter name" required>
+				<label for="player2">Player 2</label>
+				<input id="player2" type="text" name="p2" placeholder="enter name" required>
 			</div>
 			<button>Start Game</button>
 		</form>
