--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 				<label for="player2">Player 2</label>
 				<input id="player2" type="text" name="p2" placeholder="enter name" required>
 			</div>
-			<button>Start Game</button>
+			<button id="submit">Start Game</button>
 		</form>
 	</div>
 	<div class="model hide">
